--- a/src/Tedd.AsyncLock/Tedd.AsyncLock.csproj
+++ b/src/Tedd.AsyncLock/Tedd.AsyncLock.csproj
@@ -10,7 +10,7 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageTags>AsyncLock;Async-Lock;Locking;Async</PackageTags>
     <PackageReleaseNotes>Initial release</PackageReleaseNotes>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
     <PackageProjectUrl>https://github.com/tedd/Tedd.AsyncLock</PackageProjectUrl>
     <RepositoryUrl>https://github.com/tedd/Tedd.AsyncLock.git</RepositoryUrl>
@@ -21,7 +21,7 @@
     <Company>Tedd Hansen</Company>
     <Copyright>Tedd Hansen</Copyright>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageReadmeFile>README-NUGET.md</PackageReadmeFile>
     <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
     <EnableNETAnalyzers>True</EnableNETAnalyzers>
     <AnalysisLevel>latest-all</AnalysisLevel>
