--- a/src/Tedd.AsyncLock/Tedd.AsyncLock.csproj
+++ b/src/Tedd.AsyncLock/Tedd.AsyncLock.csproj
@@ -38,6 +38,10 @@
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
+    <None Include="README-NUGET.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
